testing/Travis/testcases/TypeChecker/shouldFail/RightResidualUnrelatedSources.adl
CONTEXT RightResidualUnrelatedSources IN ENGLISH

PURPOSE CONTEXT RightResidualUnrelatedSources
{+ This test must fail because join(A,B) doesn't exist (unrelated sources). +}

RELATION r[A*C]
RELATION s[B*C]
RELATION result[A*C]

RULE testRightResidualUnrelated: result = r\s

ENDCONTEXT
